<resources>
    <string name="Hello">Hello World!</string>
    <string name="appName" translatable="false">Artnet Mobile</string>
    <string name="app_name" translatable="false">Artnet Mobile</string>
    <string name="cD_lasalle" translatable="false">Logo - Campus Lasalle</string>
    <string name="cD_artnet" translatable="false">Logo - Artnet</string>
    <string name="boutonDemarrage">Démarrer</string>
    <string name="copyright" translatable="false">© CLEMENT Aymeric - 2025</string>
    <string name="bienvenue">Bienvenue dans l\'application !</string>
    <string name="accueilUnivers">Sélectionnez un univers à droite pour continuer</string>
    <string name="universExistants">Actualiser la liste des modules</string>
    <string name="afficherUnivers">Afficher l\'univers</string>

    <!-- Navbar -->
    <string name="boutonAccueil">Accueil</string>
    <string name="boutonEquipements">Equipements</string>
    <string name="boutonConfiguration">Contrôle</string>
    <string name="boutonCredits">Crédits</string>
    <string name="boutonParametres">Parametres</string>

    <!-- Titre des pages -->
    <string name="accueil">Accueil</string>
    <string name="equipements">Page Equipements</string>
    <string name="configuration">Page Configuration</string>
    <string name="credits">Crédits</string>

    <!-- Univers -->
    <string name="nomUnivers">Nom :</string>
    <string name="numeroUnivers">Univers :</string>
    <string name="ip">IP :</string>
    <string name="mac">Mac :</string>
    <string name="rssi">Signal :</string>

    <!-- Equipements -->
    <string name="titreCreation">Création d\'un équipement :</string>
    <string name="titreConfiguration">Configuration des équipements : </string>
    <string name="entreeUtilisateurNom">Nom : </string>
    <string name="entreeUtilisateurType">Type : </string>
    <string name="entreeUtilisateurNbCanaux">Nombre de canaux : </string>
    <string name="entreeUtilisateurAdresse">Adresse* : </string>
    <string name="hintAdresse">*numéro du premier canal</string>
    <string name="boutonAjoutEquipement">Ajouter l\'équipement</string>
    <string name="entreeUtilisateurUnivers">Univers :</string>
    <string name="maximumCanaux">(max 20)</string>
    <string name="rechercherEquipements">Rechercher les équipements dans cet univers</string>
    <string name="controlerEquipement">Contrôler cet équipement</string>
    <string name="envoyer">Envoyer les valeurs</string>
    <string name="titreControleEquipement">Controler l\'équipement :</string>
    <string name="version">V 0.1 – Mai 2025</string>
    <string name="alerte_recherche">Attention : Les univers doivent être actifs pour être contrôlés !</string>

    <!-- Credits -->
    <string name="titreCredits">Crédits</string>
    <string name="partie_application">Application mobile : (IR) CLEMENT Aymeric</string>
    <string name="partie_serveur">Serveur : (IR) VAUDAINE Dylan</string>
    <string name="prof_responsables">Responsables : LANDRIT Maxime (IR) - Beaumont Jerôme (ER)</string>
    <string name="support_pedagogique">Support pédagogique : Campus LaSalle Avignon</string>
    <string name="annee">Année : 2025</string>
    <string name="github_ca">GitHub - CLEMENT Aymeric</string>
    <string name="github_vd">GitHub - VAUDAINE Dylan</string>
    <string name="github_projet">Github - Projet</string>
    <string name="partie_module">Module WIFI-DMX : (ER) MARTIN Mathis</string>
    <string name="alerte_zoneDanger">Zone de danger :</string>
    <string name="reset">Réinitialiser les valeurs à 0</string>
    <string name="supprimerEquipement">Supprimer l\'équipement</string>
    <string name="creer_equipement">Créer un équipement</string>

    <!-- Parametres ! -->
    <string name="chargerBDDEquipements">Démarrer le chargement des équipements</string>
    <string name="editChargerBDDEquipements">Charger les équipements existants dans la base de donnée</string>
</resources>