<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <!-- HEADER -->
  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/header"
      android:layout_width="0dp"
      android:layout_height="100dp"
      android:background="@color/bgHeaderFooter"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

    <!-- Navbar -->
    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

      <Button
          android:id="@+id/boutonAccueil"
          style="@style/CustomTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/boutonAccueil"
          android:textSize="20sp"
          android:backgroundTint="@color/bgHeaderFooter" />

      <Button
          android:id="@+id/boutonEquipements"
          style="@style/CustomTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/boutonEquipements"
          android:textSize="20sp"
          android:backgroundTint="@color/bgHeaderFooter"
          android:layout_marginStart="16dp" />

      <Button
          android:id="@+id/boutonConfiguration"
          style="@style/CustomTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/boutonConfiguration"
          android:textSize="20sp"
          android:backgroundTint="@color/bgHeaderFooter"
          android:layout_marginStart="16dp" />

      <Button
          android:id="@+id/boutonParametres"
          style="@style/CustomTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/boutonParametres"
          android:textSize="20sp"
          android:backgroundTint="@color/bgHeaderFooter"
          android:layout_marginStart="16dp" />

      <Button
          android:id="@+id/boutonCredits"
          style="@style/CustomTextViewOn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/boutonCredits"
          android:textSize="20sp"
          android:backgroundTint="@color/bgHeaderFooter"
          android:layout_marginStart="16dp" />
    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>

  <!-- CONTENU PRINCIPAL -->
  <ScrollView
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintTop_toBottomOf="@id/header"
      app:layout_constraintBottom_toTopOf="@id/footer"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

      <TextView
          android:id="@+id/creditsTitle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/titreCredits"
          android:textSize="24sp"
          android:textStyle="bold"
          android:layout_marginBottom="16dp" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/partie_application"
          android:textSize="18sp"
          android:layout_marginBottom="8dp"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/partie_serveur"
          android:textSize="18sp"
          android:layout_marginBottom="8dp"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/partie_module"
          android:textSize="18sp"
          android:layout_marginBottom="8dp"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/prof_responsables"
          android:textSize="18sp"
          android:layout_marginBottom="8dp"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/support_pedagogique"
          android:textSize="18sp"
          android:layout_marginBottom="8dp"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/annee"
          android:textSize="18sp" />

      <Button
          android:id="@+id/boutonGithubProjet"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/github_projet"
          android:textSize="18sp"
          android:layout_marginTop="24dp" />

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginTop="24dp"
          android:gravity="center_horizontal">

        <Button
            android:id="@+id/boutonGithubCA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/github_ca"
            android:textSize="18sp"
            android:layout_marginEnd="16dp" />

        <Button
            android:id="@+id/boutonGithubVD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/github_vd"
            android:textSize="18sp" />
      </LinearLayout>

    </LinearLayout>

  </ScrollView>

  <!-- FOOTER -->
  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/footer"
      android:layout_width="0dp"
      android:layout_height="100dp"
      android:background="@color/bgHeaderFooter"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

    <ImageView
        android:id="@+id/logoLaSalle"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/cD_lasalle"
        android:src="@drawable/lasalle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="10dp"/>

  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>