<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- HEADER -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/bgHeaderFooter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Navbar -->
        <LinearLayout
            android:id="@+id/navbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/boutonAccueil"
                style="@style/CustomTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boutonAccueil"
                android:textSize="20sp"
                android:backgroundTint="@color/bgHeaderFooter" />

            <Button
                android:id="@+id/boutonEquipements"
                style="@style/CustomTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boutonEquipements"
                android:textSize="20sp"
                android:backgroundTint="@color/bgHeaderFooter"
                android:layout_marginStart="16dp" />

            <Button
                android:id="@+id/boutonConfiguration"
                style="@style/CustomTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boutonConfiguration"
                android:textSize="20sp"
                android:backgroundTint="@color/bgHeaderFooter"
                android:layout_marginStart="16dp" />

            <Button
                android:id="@+id/boutonParametres"
                style="@style/CustomTextViewOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boutonParametres"
                android:textSize="20sp"
                android:backgroundTint="@color/bgHeaderFooter"
                android:layout_marginStart="16dp" />

            <Button
                android:id="@+id/boutonCredits"
                style="@style/CustomTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boutonCredits"
                android:textSize="20sp"
                android:backgroundTint="@color/bgHeaderFooter"
                android:layout_marginStart="16dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- CONTENU PRINCIPAL -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/boutonChargementEquipements"
            style="@style/CustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chargerBDDEquipements"
            android:textSize="20sp"
            android:backgroundTint="@color/bgHeaderFooter"
            android:layout_marginStart="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- FOOTER -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/bgHeaderFooter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/logoLaSalle"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/cD_lasalle"
            android:src="@drawable/lasalle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>