<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- HEADER -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/bgHeaderFooter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Navbar -->
        <LinearLayout
            android:id="@+id/navbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/logoLaSalle">

            <Button
                android:id="@+id/boutonAccueil"
                style="@style/CustomTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boutonAccueil"
                android:textSize="20sp"
                android:backgroundTint="@color/bgHeaderFooter" />

            <Button
                android:id="@+id/boutonEquipements"
                style="@style/CustomTextViewOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boutonEquipements"
                android:textSize="20sp"
                android:backgroundTint="@color/bgHeaderFooter"
                android:layout_marginStart="16dp" />

            <Button
                android:id="@+id/boutonConfiguration"
                style="@style/CustomTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boutonConfiguration"
                android:textSize="20sp"
                android:backgroundTint="@color/bgHeaderFooter"
                android:layout_marginStart="16dp" />

            <Button
                android:id="@+id/boutonCredits"
                style="@style/CustomTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/boutonCredits"
                android:textSize="20sp"
                android:backgroundTint="@color/bgHeaderFooter"
                android:layout_marginStart="16dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/logoLaSalle"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/cD_lasalle"
            android:src="@drawable/lasalle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- CONTENU PRINCIPAL -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/ajouterEquipement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="Ajouter équipement"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/configurerEquipement"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.01" />

        <Button
            android:id="@+id/configurerEquipement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Configurer équipement"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ajouterEquipement"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.01" />

        <!-- Zone 1 invisible -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/creationEquipement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/configurerEquipement"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/titrePartieCreation"
                android:text="@string/titreCreation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp" />

            <LinearLayout
                android:id="@+id/ligneSaisie"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/titrePartieCreation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/entreeUtilisateurNom" />

                    <EditText
                        android:id="@+id/editNom"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/entreeUtilisateurUnivers" />

                    <Spinner
                        android:id="@+id/spinnerUnivers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/entreeUtilisateurType" />

                    <Spinner
                        android:id="@+id/spinnerEquipement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/entreeUtilisateurNbCanaux" />

                    <EditText
                        android:id="@+id/editNbCanaux"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:inputType="number" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/entreeUtilisateurAdresse" />

                    <EditText
                        android:id="@+id/editAdresse"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:inputType="number" />
                </LinearLayout>

                <TextView
                    android:id="@+id/infoEditNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hintAdresse"
                    android:textColor="#888888"
                    android:textSize="12sp"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="100dp"/>

                <Button
                    android:id="@+id/boutonAjoutEquipements"
                    style="@style/CustomTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boutonAjoutEquipement"
                    android:textSize="20sp"
                    android:backgroundTint="@color/bgHeaderFooter"
                    android:layout_marginStart="25dp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <!-- Zone 2 Invisible -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/configurationEquipement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/configurerEquipement"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/titrePartieConfiguration"
                android:text="@string/titreConfiguration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- FOOTER -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/bgHeaderFooter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textViewCommentaires"
            style="@style/CustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textSize="25sp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
