<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- HEADER -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/bgHeaderFooter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/logoLaSalle"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:contentDescription="@string/cD_lasalle"
            android:src="@drawable/lasalle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- CONTENU PRINCIPAL -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1"/>

        <TextView
            android:id="@+id/textViewCopyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pirataone"
            android:textSize="50sp"
            android:text="@string/appName"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/guidelineCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:id="@+id/logoArtnet"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:contentDescription="@string/cD_artnet"
            android:src="@drawable/artnet"
            app:layout_constraintTop_toBottomOf="@id/textViewCopyright"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textViewEtatMQTT"
            style="@style/CustomTextView"
            android:layout_width="350sp"
            android:layout_height="50sp"
            android:textSize="15sp"
            android:gravity="center"
            android:text=""
            android:backgroundTint="@color/bgHeaderFooter"
            app:layout_constraintTop_toBottomOf="@id/logoArtnet"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/boutonDemarrage"
            style="@style/CustomTextView"
            android:layout_width="250sp"
            android:layout_height="100sp"
            android:textSize="25sp"
            android:text="@string/boutonDemarrage"
            android:backgroundTint="@color/bgHeaderFooter"
            app:layout_constraintTop_toBottomOf="@id/textViewEtatMQTT"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- FOOTER -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/bgHeaderFooter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textViewCommentaires"
            style="@style/CustomTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>